# Yacht-Elementary

./: README.md  meson.build
data/: meson.build  yacht.appdata.xml.in  yacht.desktop.in
data/icons/: icons.gresource.xml
debian/: changelog  control  copyright
po/: POTFILES  meson.build
src/: Application.vala  MainWindow.vala
src/Dialog/: About.vala  NewGame.vala  NewPlayer.vala  Results.vala  Scores.vala
src/Gameplay/: Die.vala  Game.vala  Player.vala  Scores.vala
src/Views/: Game.vala  Welcome.vala
src/Widgets/: PlayerCard.vala  PlayerListRow.vala  ScoreListRow.vala
